Testing/Kanban/compiling_error.txt
C:\Users\Charlie\Documents\OldSchoolGame\Testing\Kanban\Kanban.cpp:2:21: fatal error: ncurses.h: No such file or directory
 #include <ncurses.h>
                     ^
compilation terminated.
